# snake_di

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Readme.md  noxfile.py  pyproject.toml  tasks.py
.github/workflows/: build_snake_di_qa_image.yml  ci.yml  nox-test.yml  quality-assurance.yml  snake_di_qa_coverage.yml  test.yml  tests.yml
example/: factories.py
examples/quick_example/: file_manager.py  main.py  provider.py
examples/test_example/: factories.py  services.py
multipy/: Dockerfile  _alpine_clean_up_pyenv.bash  _alpine_symlink_pyenv_pythons.bash
pure_di/: __init__.py  _container.py  _factory.py  _factory_group.py  _inspector.py  _provider.py  _service_dict.py  pytest.py
requirements/: dev-requirements.in  dev-requirements.txt  dev.in  dev.txt  nox-requirements.in  nox-requirements.txt  test.in  test.txt
snake_di/: __init__.py  _container.py  _factory.py  _factory_group.py  _inspector.py  _provider.py  _service_dict.py  _types.py  pytest.py  utils.py
tests/: conftest.py  test_example_app.py  test_inspector.py  test_partial_build_every_call.py  test_pytest_integration.py
tests/app/: factories.py
