[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pure-di"
authors = [{name = "Ilya Cherezov", email = "cherezov.ia@phystech.edu"}]
readme = "Readme.md"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dynamic = ["version", "description"]
dependencies = ["typing_extensions"]

[project.urls]
Home = "https://github.com/lionsoon/light_di"


[tool.coverage.report]
exclude_lines = ["# pragma: no cover", "@overload"]

[tool.black]
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
